src/test/ui/associated-types/cache/project-fn-ret-contravariant.oneuse.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/project-fn-ret-contravariant.rs:50:1
   |
LL | fn main() { }
   | ^^^^^^^^^

error: aborting due to previous error

